Implementacion de esqueleto y de estrategia para la lectura de pdf y validacion de acta de nacimiento
